tests/golden/invalid/invalid.goldplate
{
    "input_files": "*.rego",
    "command": "fregot",
    "arguments": ["test", "${GOLDPLATE_INPUT_FILE}"],
    "asserts": [
        { "exit_code": 1
        },
        {
            "stderr": "${GOLDPLATE_INPUT_FILE}.stderr"
        },
        {
            "stdout": "${GOLDPLATE_INPUT_FILE}.stdout"
        }
    ]
}
